# simple-brightness-applet

./: configure.ac
data/: Makefile.am  simple-brightness-applet.desktop
debian/: changelog  control  copyright  rules
src/: Makefile.am  simple-brightness-applet.c  simple-brightness-applet.h
