desktoplib_LTLIBRARIES =  simple-brightness-applet.la
desktoplibdir = $(HILDON_DESKTOP_LIB_DIR)

simple_brightness_applet_la_SOURCES = simple-brightness-applet.c simple-brightness-applet.h
simple_brightness_applet_la_CFLAGS = $(BRIGHTNESS_CFLAGS)
simple_brightness_applet_la_LIBADD = $(BRIGHTNESS_LIBS)
simple_brightness_applet_la_LDFLAGS = -module -avoid-version
